# cmss-services-integrator

./: .gitignore  Makefile  README.md  code.py  concurrent_observer_pattern.py  main.py  pyproject.toml  to_be_optimized.py
concurrent_notifier/: observer.py  subject.py
concurrent_notifier/utils/: threading_utils.py
data_transformation/strategies/: add_strategy.py  base_strategy.py  subtract_strategy.py  to_lowercase_strategy.py
data_transformation/utils/: data_transformer.py  error_handler.py
docs/: code_optimization.md  component_architecture_design.md  data_transformation_functions.md
src/: main.py
tests/: test_data_transformation.py  test_main.py
